welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: ';' expected but '.' found.
	var n:Int = nums T.length
                          ^